# voice-commerce-agent

./: .env.example  .gitignore  DEMO_PLAN.html  README.md  pyproject.toml
.claude/: SESSION_NOTES.md  launch.json
src/voice_commerce/: main.py
src/voice_commerce/api/middleware/: cors.py
src/voice_commerce/api/routes/: health.py  voice.py  widget.py
src/voice_commerce/config/: settings.py
src/voice_commerce/core/actions/: action_dispatcher.py  browser_actions.py
src/voice_commerce/core/rag/: embedder.py  retriever.py  vector_store.py
src/voice_commerce/core/state/: __init__.py  checkout_state.py
src/voice_commerce/core/tools/: cart_tools.py  checkout_tools.py  context_tools.py  product_tools.py  tool_dispatcher.py  tool_registry.py
src/voice_commerce/core/voice/: audio_processor.py  gemini_live_handler.py  prompts.py  trace_logger.py
src/voice_commerce/handlers/: voice_websocket_handler.py
src/voice_commerce/models/: cart.py  product.py  screen_context.py  tool_response.py
src/voice_commerce/services/: csv_client.py  rag_service.py  woocommerce_client.py
static/: embed_demo.html  test_client.html  widget.js
tests/: conftest.py  csv_client.py  learing.ipynb  phase2_test.py  products.csv  test_audio_processor.py  test_health.py  test_part1b_category_intelligence.py  test_tool_dispatcher.py  test_voice_handler.py  test_woocommerce_client.py
