[project]
name = "voice-commerce-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

# this says: "Hey Hatch (our build tool), when you try to install this project, the actual code is located in the src/voice_commerce folder."
[tool.hatch.build.targets.wheel]
packages = ["src/voice_commerce"]