[project]
name = "voice-commerce-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "google-genai>=1.68.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.3.0",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]   

# this says: "Hey Hatch (our build tool), when you try to install this project, the actual code is located in the src/voice_commerce folder."
[tool.hatch.build.targets.wheel]
packages = ["src/voice_commerce"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
pythonpath   = ["src"]


[tool.ruff]
target-version = "py312"
line-length    = 100


[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
